20000126-12:50 GMT+1 Ignacio Ortiz <ignacio@fivetech.com>
   * source/rtl/tget.prg
     * Bug fixed on numeric gets with zero digits in his value

2000-01-25 16:20 GMT-5 David G. Holm <dholm@ sd-llc.com>

   * source/rtl/itemapi.c
     ! Don't check for infinity when checking for numeric overflow and using
       a Borland C compiler, because Borland C returns 0 for log(0), which is
       what is being used to set infinity.

2000-01-25 21:47 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * Partial support for editing variables.

   * source/rtl/tgetlist.prg
     * Added support for non-modal GetLists management.

20000125-10:05 GMT+2 Chen Kedem <niki@actcom.co.il>
  * source/rtl/arrays.c
    - remove documentation stolen from CA-Clipper 5.2 NG from the following
      functions: ARRAY(), AADD(), ASIZE(), ATAIL(), AINS(), ADEL(), AFILL(),
                 ASCAN()
    - remove $EXAMPLES$ stolen from CA-Clipper 5.2 NG from the following
      function: ACOPY(), ACLONE()
    + ACLONE() : add $COMPLIANCE$ note

2000-01-25 02:45 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * Support for up and down arrows on command window
       Still needs some fine tunning.

2000-01-24 20:15 GMT-5 David G. Holm <dholm@ sd-llc.com>

   * source/rtl/environ.c
     % Due to careless use of the CVS repository, I had to redo the following:
     ! Fixed bug in setting end of string for case VER_PLATFORM_WIN32_WINDOWS:
     ! Put Windows support for MingW32 back in after accidentally removing it.

20000123-17:35 GMT+1 Ignacio Ortiz <ignacio@fivetech.com>
   * source/rtl/tget.prg
     * Improved: cursor flickering removed

2000-01-23 16:30 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * Improved debugger.

   * source/rtl/tgetlist.prg
     * Improved METHOD ShowScoreBoard.

   * source/vm/hvm.c
     + New public BOOL variable hb_DebuggerIsWorking
