@@ -1,3 +1,7 @@
+20000126-21:41 GMT+1 Patrick Mast <harbour@PatrickMast.com>
+   * include/hbver.c
+     * Bumped build to 31 and updated date
+
 20000126-12:50 GMT+1 Ignacio Ortiz <ignacio@fivetech.com>
    * source/rtl/tget.prg
      * Bug fixed on numeric gets with zero digits in his value
